# interpolator

./: .gitignore  README.md  pyproject.toml
matrix_interpolator/: cli.py  core.py  exceptions.py  io.py
tests/: test_cli.py  test_core.py  test_io.py
