[project]
name = "interpolator"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim Kuleshov",email = "kuleshov.max.v@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "pytest (>=8.4.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
setuptools = "^80.9.0"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"

